// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random setups the rotation they had before the list: Defensive 1`] = `
[
  "02b5d35bbdc092",
  "11579ffe1df657",
  "05061d703d2e67",
  "00cd8fb568f6a3",
  "177ea443ad2661",
  "0828648eea6c7c",
  "1be1e97716d45a",
  "0466bb450428d0",
  "187cfead1e7d99",
  "15c13ccc939d15",
  "0d42b3efd43b61",
  "13a50536d71c29",
  "04441ec35c5486",
  "0e5e8cedf9788d",
  "167997fe3f05f3",
  "0434226ea55064",
  "0208e80ce6e2ac",
  "01c5eb72bff7ae",
  "1f4561912eb198",
  "1d754ce959caed",
  "0913f954a03df2",
  "15aab56cd69f21",
  "075552b8509654",
  "1b3e1590b08417",
  "17627475be6de3",
  "0fa4a575030bad",
  "16081f079ebd4d",
  "1c2ec931078732",
  "173d39a71a69bb",
  "01e97eedf166d5",
  "1ef3179ea1c805",
  "082461fddd26c3",
  "127f15db722d42",
  "0e02c1c926dc2d",
  "1317eb1b41fc70",
  "0f978cc4072454",
  "16f4ad720de7ac",
  "1d568bc39cfc30",
  "131855a2c73f55",
  "0ad660b762db0d",
  "11f1c039d7e5ff",
  "18f782ab2825f7",
  "1c64a15bf7630b",
  "14f11b9bfff368",
  "0366b68bfb5ef8",
  "15e5e9c3f2d771",
  "0436046957a9f0",
  "06b8eed592a885",
  "0642ff8e61c9b7",
  "120938ef3f54ac",
  "186dfe768b964b",
  "057685754a6a94",
  "196e08cc4687fa",
  "0a8166ef9de333",
  "0e5501cb17b94e",
  "068e19294c8731",
  "0bad510297416a",
  "1cd78d7ef33725",
  "04792aab724ee1",
  "0fbda86f66562e",
  "0748d9ee86d812",
  "1b0ab5684c7dbc",
  "0418c290b863d6",
  "199a39e084b81c",
  "1f09dd30b55261",
  "0434df8563b998",
  "0ccd9037c718b3",
  "1bf8cfdd12f270",
  "19b84d4b2414c7",
  "08362e28798690",
  "010d95f7307ca6",
  "19da4917b5352c",
  "169c332f3c00db",
  "1e7f0822d55458",
  "0d47e6fd8954f8",
  "12dbc6166aceca",
  "064a1201b6047b",
  "0edd890fa6be68",
  "1b75be94bcb96f",
  "143407bd651838",
  "1a16ec3c17b265",
  "01ab8f852dfd1f",
  "194790d3024f00",
  "164a70ccd14c14",
  "073afd2c621564",
  "17ed7728d9970a",
  "154a720b808935",
  "118ba2b2c15688",
  "109348adf69728",
  "0089aca7933c92",
  "09620342a1ca8f",
  "036bd1262d4075",
  "0357643e452121",
  "12dbf48ae49bc1",
  "1eb3ce60e2fac6",
  "0eedf336d12a15",
  "0d7d8eb6ea0429",
  "0f416de580e023",
  "1017c254c9f98e",
  "0bbbb791c5e21b",
  "1f42b0caa3ec4b",
  "14414314987ba5",
  "104817ac0beaac",
  "0842213c87d881",
  "148213acf46796",
  "140d35aca7c44e",
  "0b8a240084f083",
  "1e709729b913dd",
  "03b527533dcb29",
  "0ca0469a72eb88",
  "04d7ec6d811017",
  "0c1ef56649ee4c",
  "0a0d8139424043",
  "0bb29a59708f8a",
  "0161cb2c398f09",
  "0240990101c420",
  "0f3aecf08253a3",
  "133cd45015bc92",
  "05dfa0b8427faf",
  "18fd4a54245bed",
  "1c87f92abbc471",
  "0f66faeaf01172",
  "0c8374f766e086",
  "1f59b4aefd769f",
  "03ec90a9212271",
  "08e4e6d73ca9c5",
  "1765e189912ea7",
  "1e91165a54f9ef",
  "0f6d8350479e9f",
  "1b6bbdf0d830a5",
  "101a9e57186f1f",
  "0d69493cba9397",
  "19d0f1984ddde9",
  "008704b0597fb0",
  "15d434d4788c36",
  "0511d4a1692a3f",
  "16adb7959deb2d",
  "15b828ec3343a1",
  "1fc561238ed4e2",
  "1aef1bc9f159be",
  "0162882243de8b",
  "15a1fc4ec825d0",
  "0fafa981e88f6e",
  "10a67b0527ba90",
  "13e18dbe9f0398",
  "1d872163db074d",
  "1e39e019bd6c6f",
  "01e497069910bc",
  "1c78be691b2b32",
  "0c1ff00552ce98",
  "1aefeddc0bb7ab",
  "18b8e62690031f",
  "122aa7603e105f",
  "116c796772b3dc",
  "07fc7d2879ede2",
  "11dedc5d60b0b3",
  "0bf945de55fce5",
  "1753a2c96008cb",
  "1ca995a2179ad3",
  "0f6eebd79985d8",
  "020a019083b11f",
  "1398aa61cb89cb",
  "1d77e31a21552a",
  "1a13d2dfb9fe1e",
  "02348699e21132",
  "1c8289a71bf515",
  "046bf9fd1ff126",
  "0394b3176ac297",
  "0490b6668024ce",
  "16e71cead1b225",
  "09b151b510065a",
  "0c0816898bec83",
  "16ec3d20ba181d",
  "1c4bdf33fd03f7",
  "1fb6dff7113b64",
  "1402dc283ad975",
  "0244f4217fba47",
  "1edfa0a05381bf",
  "1664b25e75d22b",
  "0d046db74ad89a",
  "0bcc5891fd26d3",
  "1e43a3e16c54de",
  "1631d44e29be8f",
  "1c5b0c1a4a1600",
  "0f2bb30a112432",
  "0526c3e248c604",
  "026ec8e6fd6afa",
  "1c5650aac273b5",
  "05a99542a5d88f",
  "0a5eeeebd6a1d4",
  "0120b2dd32442a",
  "1d8196cb495140",
  "010a7853dd80bc",
  "178cfc00fd85ea",
  "08ccbf6b22f07b",
  "165cd03d68a49b",
  "024a7e0aebd50a",
  "0de089bef9c70b",
  "198af1671744fb",
  "0e111130413fcd",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random setups the rotation they had before the list: Max TPS 1`] = `
[
  "0d13895fe07237",
  "10cc0207f60151",
  "17cb30bcbeeb22",
  "1a4ea1fd796b81",
  "161139fdcddda0",
  "07f75578dc949e",
  "1be1e97716d45a",
  "0c5eaf43e3e001",
  "187cfead1e7d99",
  "1c1e6bf58eb246",
  "0618a50e1ad39c",
  "1d725b2a748f90",
  "1f8c51e0d69b32",
  "0907dbceac2057",
  "075858954c4961",
  "0156debd6e54ee",
  "0208e80ce6e2ac",
  "00c5657e6aba2d",
  "1f63ca93c21067",
  "13a6091c2d737d",
  "14cbdbde1db520",
  "047412eaf505c9",
  "10ee4961980a49",
  "1ab9128d367901",
  "035288ed905508",
  "09f8f6c7b0748a",
  "0b7f12c182b907",
  "014214dd569a6f",
  "195925a2c1c36f",
  "076722e6aa2d97",
  "1d4d6e40fb99a2",
  "10ca6f1b06250e",
  "06b8808dcce173",
  "047933ec54629f",
  "14fbc91257c432",
  "0f978cc4072454",
  "0da24014d44d25",
  "099dfa0a9cb2b7",
  "069015e98c354d",
  "11c8a4b21c7ee8",
  "1b38e08f9f6707",
  "1920056fe2d146",
  "108e70a1eb3135",
  "15612826cc34e0",
  "1ca65b29f0596e",
  "0b378a8948bccb",
  "0425e3ca2a5744",
  "06b8eed592a885",
  "1d4c4f696e7664",
  "19db84a9d9b9bf",
  "10e83ed37f93ee",
  "057685754a6a94",
  "0008af8137518f",
  "0a8166ef9de333",
  "07d72cec649d08",
  "178fd11d09e4e1",
  "14b948fdcb802c",
  "1cd78d7ef33725",
  "08933b57d4ca6d",
  "0d7105f173c97f",
  "025887f0c53b3c",
  "1eda271276b436",
  "1f64b2f8664c3f",
  "199a39e084b81c",
  "12868976c59b07",
  "0434df8563b998",
  "00e009749da789",
  "1a26ffa753a155",
  "142649535e0a6c",
  "01ecc9591d6794",
  "06c61800986d8b",
  "1f77bb918055c6",
  "0202edb651dcd2",
  "03096f700b8017",
  "169335b07b3587",
  "1ed9d0388125cb",
  "070730bb0393b1",
  "1db430c1075f23",
  "03473e7bf51d1c",
  "137c6a2c8094aa",
  "088c880a96dc5c",
  "01ab8f852dfd1f",
  "1225c47187f367",
  "1f32aca2a154dd",
  "090f16e9eed970",
  "06d10a5edff5db",
  "0754719d28c221",
  "01464e3d91abed",
  "0e05fc1fc806a2",
  "003d7c1e948475",
  "1bb420bc39246b",
  "16f5b24ef0b16d",
  "11d1a11126154f",
  "14b1030dab803f",
  "1da5a355d674a3",
  "0eaff5a0860ad0",
  "0bc2adcf0ee6a7",
  "0c6679d123637b",
  "1017c254c9f98e",
  "03c01adc912add",
  "018a3d1a4d105f",
  "164e76f864dd3d",
  "104817ac0beaac",
  "0d9ddc69be97b5",
  "07c743cff6056f",
  "1d5f6d107d5cc7",
  "13a10c1df06a49",
  "170ca9f6038cf4",
  "03672f62247eab",
  "0bbe0ea2ea009a",
  "077a5011d76191",
  "0c1ef56649ee4c",
  "155f99024c9ca3",
  "1cb4744223919d",
  "0985de8e5b908e",
  "1d5a49d9e6d7b6",
  "16f016381d8c7e",
  "09d97e94426568",
  "1ee2d189d52e80",
  "08f1126df556d5",
  "1c87f92abbc471",
  "0718e3e818eef7",
  "0c8374f766e086",
  "02ee020dcb665d",
  "1b5f2139528868",
  "039eeb7dec655b",
  "076aae9e9c25cd",
  "00c249bc9d20ba",
  "11433b2467fd27",
  "1b6bbdf0d830a5",
  "1506fec046bb4f",
  "1e85c8ee4debd5",
  "0b6c49d53940b1",
  "192c4811a2ed0f",
  "1203c212187b9a",
  "0511d4a1692a3f",
  "1a66dddf7305cc",
  "0dd49ee83cfad2",
  "1df4304790f686",
  "087c28cc5a6671",
  "0162882243de8b",
  "159661745f27a2",
  "0fafa981e88f6e",
  "1e256cb6f0373e",
  "1b06d4597ee0e1",
  "10701ef597217a",
  "1e39e019bd6c6f",
  "1884b6fd009a7f",
  "0a80f1a09d8308",
  "07c0ea354e11c0",
  "117d10d3a4b08e",
  "07019f6ce38450",
  "0667fb922c3894",
  "0b47f59bfc518d",
  "18b7b4d120b834",
  "0f72feedd62569",
  "048a115a4595f5",
  "0874a49c4532cf",
  "0e0da6c9ee556a",
  "1a02291a10c2fe",
  "03e1d4c7456f76",
  "1b52e3a28c55fc",
  "14805521c9afd8",
  "1e20b02c0c62fa",
  "02348699e21132",
  "1c377efcf9a1a5",
  "046bf9fd1ff126",
  "03aac2f191168c",
  "0050cb71acace7",
  "14f42878cb9dfc",
  "09b151b510065a",
  "0c57ee06c71930",
  "17c44bde611a1a",
  "0acf00d4341ceb",
  "1f5b0c02de42b9",
  "1dd69152affaa6",
  "0797a94bdd37c0",
  "0b85df9db70b3c",
  "1664b25e75d22b",
  "00ea871339aefb",
  "0b67400645af62",
  "1e43a3e16c54de",
  "1631d44e29be8f",
  "1abf9effd499f6",
  "0f990a6b300c09",
  "150898c71a1a97",
  "10dc4cc3692398",
  "0ef9d0930f6f08",
  "082f4f13363062",
  "0a8d8ee1c4bfdf",
  "19c94adc45f7b1",
  "167d793f403dbf",
  "19935abb36e2eb",
  "13915f9f4d92ba",
  "133ca2f9af4b7e",
  "165cd03d68a49b",
  "1c165fbad2e4af",
  "0ee1dafa3f0ee5",
  "03f8caf059a331",
  "16d19690a7591e",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random setups the rotation they had before the list: as drawn, a missing Priority as Defensive 1`] = `
[
  "02b5d35bbdc092",
  "10cc0207f60151",
  "05061d703d2e67",
  "00cd8fb568f6a3",
  "177ea443ad2661",
  "0828648eea6c7c",
  "1be1e97716d45a",
  "0466bb450428d0",
  "187cfead1e7d99",
  "1c1e6bf58eb246",
  "0618a50e1ad39c",
  "13a50536d71c29",
  "04441ec35c5486",
  "0e5e8cedf9788d",
  "167997fe3f05f3",
  "0434226ea55064",
  "0208e80ce6e2ac",
  "01c5eb72bff7ae",
  "1f4561912eb198",
  "1d754ce959caed",
  "0913f954a03df2",
  "047412eaf505c9",
  "075552b8509654",
  "1ab9128d367901",
  "17627475be6de3",
  "0fa4a575030bad",
  "16081f079ebd4d",
  "1c2ec931078732",
  "173d39a71a69bb",
  "076722e6aa2d97",
  "1ef3179ea1c805",
  "082461fddd26c3",
  "127f15db722d42",
  "0e02c1c926dc2d",
  "1317eb1b41fc70",
  "0f978cc4072454",
  "16f4ad720de7ac",
  "099dfa0a9cb2b7",
  "131855a2c73f55",
  "0ad660b762db0d",
  "11f1c039d7e5ff",
  "18f782ab2825f7",
  "1c64a15bf7630b",
  "14f11b9bfff368",
  "1ca65b29f0596e",
  "15e5e9c3f2d771",
  "0436046957a9f0",
  "06b8eed592a885",
  "0642ff8e61c9b7",
  "19db84a9d9b9bf",
  "186dfe768b964b",
  "057685754a6a94",
  "196e08cc4687fa",
  "0a8166ef9de333",
  "0e5501cb17b94e",
  "068e19294c8731",
  "0bad510297416a",
  "1cd78d7ef33725",
  "04792aab724ee1",
  "0d7105f173c97f",
  "0748d9ee86d812",
  "1b0ab5684c7dbc",
  "0418c290b863d6",
  "199a39e084b81c",
  "1f09dd30b55261",
  "0434df8563b998",
  "0ccd9037c718b3",
  "1bf8cfdd12f270",
  "142649535e0a6c",
  "08362e28798690",
  "010d95f7307ca6",
  "19da4917b5352c",
  "169c332f3c00db",
  "1e7f0822d55458",
  "0d47e6fd8954f8",
  "12dbc6166aceca",
  "064a1201b6047b",
  "0edd890fa6be68",
  "03473e7bf51d1c",
  "143407bd651838",
  "1a16ec3c17b265",
  "01ab8f852dfd1f",
  "194790d3024f00",
  "164a70ccd14c14",
  "073afd2c621564",
  "17ed7728d9970a",
  "154a720b808935",
  "118ba2b2c15688",
  "109348adf69728",
  "0089aca7933c92",
  "09620342a1ca8f",
  "16f5b24ef0b16d",
  "0357643e452121",
  "14b1030dab803f",
  "1da5a355d674a3",
  "0eaff5a0860ad0",
  "0bc2adcf0ee6a7",
  "0f416de580e023",
  "1017c254c9f98e",
  "0bbbb791c5e21b",
  "1f42b0caa3ec4b",
  "14414314987ba5",
  "104817ac0beaac",
  "0d9ddc69be97b5",
  "148213acf46796",
  "1d5f6d107d5cc7",
  "0b8a240084f083",
  "1e709729b913dd",
  "03b527533dcb29",
  "0bbe0ea2ea009a",
  "077a5011d76191",
  "0c1ef56649ee4c",
  "155f99024c9ca3",
  "0bb29a59708f8a",
  "0161cb2c398f09",
  "0240990101c420",
  "0f3aecf08253a3",
  "09d97e94426568",
  "05dfa0b8427faf",
  "18fd4a54245bed",
  "1c87f92abbc471",
  "0f66faeaf01172",
  "0c8374f766e086",
  "1f59b4aefd769f",
  "03ec90a9212271",
  "08e4e6d73ca9c5",
  "1765e189912ea7",
  "1e91165a54f9ef",
  "11433b2467fd27",
  "1b6bbdf0d830a5",
  "101a9e57186f1f",
  "0d69493cba9397",
  "19d0f1984ddde9",
  "192c4811a2ed0f",
  "15d434d4788c36",
  "0511d4a1692a3f",
  "16adb7959deb2d",
  "15b828ec3343a1",
  "1df4304790f686",
  "087c28cc5a6671",
  "0162882243de8b",
  "15a1fc4ec825d0",
  "0fafa981e88f6e",
  "1e256cb6f0373e",
  "13e18dbe9f0398",
  "1d872163db074d",
  "1e39e019bd6c6f",
  "01e497069910bc",
  "1c78be691b2b32",
  "0c1ff00552ce98",
  "1aefeddc0bb7ab",
  "18b8e62690031f",
  "122aa7603e105f",
  "116c796772b3dc",
  "18b7b4d120b834",
  "11dedc5d60b0b3",
  "0bf945de55fce5",
  "0874a49c4532cf",
  "0e0da6c9ee556a",
  "1a02291a10c2fe",
  "020a019083b11f",
  "1398aa61cb89cb",
  "14805521c9afd8",
  "1a13d2dfb9fe1e",
  "02348699e21132",
  "1c8289a71bf515",
  "046bf9fd1ff126",
  "0394b3176ac297",
  "0490b6668024ce",
  "16e71cead1b225",
  "09b151b510065a",
  "0c0816898bec83",
  "16ec3d20ba181d",
  "1c4bdf33fd03f7",
  "1fb6dff7113b64",
  "1402dc283ad975",
  "0244f4217fba47",
  "0b85df9db70b3c",
  "1664b25e75d22b",
  "00ea871339aefb",
  "0bcc5891fd26d3",
  "1e43a3e16c54de",
  "1631d44e29be8f",
  "1c5b0c1a4a1600",
  "0f2bb30a112432",
  "150898c71a1a97",
  "026ec8e6fd6afa",
  "0ef9d0930f6f08",
  "05a99542a5d88f",
  "0a5eeeebd6a1d4",
  "0120b2dd32442a",
  "1d8196cb495140",
  "010a7853dd80bc",
  "178cfc00fd85ea",
  "08ccbf6b22f07b",
  "165cd03d68a49b",
  "024a7e0aebd50a",
  "0de089bef9c70b",
  "198af1671744fb",
  "0e111130413fcd",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random whole setups the plan they had before the list: Defensive 1`] = `
[
  "0ec3510e48dcfc",
  "0aae3c40295496",
  "05ef5361c0fc15",
  "1e867bb608b691",
  "0ae8de499ee9df",
  "1a25365527c932",
  "060609277a3292",
  "0a8a2113524b90",
  "07b50a123cad54",
  "178acb8f56c0a4",
  "1b2fa72d1d64cd",
  "07adf63eb3131c",
  "143e63077ac126",
  "0af2f17b314517",
  "03e8e51bdda207",
  "07a181decee71a",
  "0720f080ffc630",
  "183895ca0c83dc",
  "038ef07f771bdc",
  "113ed2cf940b8d",
  "0164575d2f237a",
  "0d7287c0800c21",
  "175f0033561110",
  "05284ca12146e2",
  "17bd229cef250e",
  "0c4cd92098a512",
  "05d46f75b18321",
  "0a51a72bf83e8a",
  "14c1719dc86383",
  "182a24e38ab38b",
  "0e570cec90c922",
  "15a2dcb4b33a8f",
  "0df7e83ecac11d",
  "0f730e01e1dee8",
  "0fc5bbcc2e4780",
  "09f8536b5cee3f",
  "1555a10115326b",
  "0ae2ccc5b62ded",
  "0b47bae4d5e5a3",
  "04773e7d4ffb22",
  "095118add262fc",
  "00fac75909a9eb",
  "097e85c854813f",
  "112353ec0c8f22",
  "1caf6b3257423a",
  "035123a6e97084",
  "1136835a161262",
  "0b07b9a058f218",
  "0b0d660c67da4a",
  "0262683a96d4bf",
  "10a5ac2a6fc4a8",
  "0daa6d39a4f71b",
  "199c4f03e21222",
  "064f350ce71f7c",
  "0340bf56390101",
  "049e3edeb1c473",
  "1bfa65beed1298",
  "1375c90ac8b091",
  "166a99be85bce5",
  "0264583483a491",
  "03b788793c606f",
  "01372982e299ed",
  "05d1650292ccac",
  "03a6a5d4ec3796",
  "11b6bfe6b2ac96",
  "0990cc80df9d25",
  "03621e9bbfc757",
  "00788e5a810b72",
  "140f6bae7e2d5d",
  "0e8e3ede514ec2",
  "125214a33b1c78",
  "0ca6c611a31a16",
  "010915a51cedda",
  "17dfff7fd67273",
  "0b31a4fff49bc0",
  "1f0050ea284ef0",
  "046414a8337e0b",
  "167169a851d10e",
  "0c0e47d22f81b1",
  "1ff263116dae3a",
  "092deab4aec1e9",
  "01e62f4d2eca20",
  "12487eebc6cdee",
  "1050e898d35fe5",
  "0c47c4f16cfb5c",
  "107e05d4ed40a1",
  "09955f6449b259",
  "1f4c8310e0cd0c",
  "1cbddc7d381deb",
  "0bc5e606325960",
  "017c59fdea821d",
  "03b6db57f53da0",
  "1831ff3dc8166d",
  "1574e49a5ccbc5",
  "14f487449c245d",
  "16fc5e42fb9acf",
  "1ccfce8b9bbb33",
  "1e2a1c26072441",
  "0957720f246f04",
  "0b4b8cae7d7ce1",
  "04583793558b6f",
  "1dca7a9f30c211",
  "0185408ee911b6",
  "046a4085ed62c5",
  "0364591003be12",
  "0d9339f644faa0",
  "05f365e45d78e8",
  "1bb0aa936a48b0",
  "021a3f6e5d214f",
  "1aaffc43bc4737",
  "09362cc43b2712",
  "05a4dc42c428bc",
  "11d69cdccc8297",
  "143c08dbab0f4b",
  "145a86778273b6",
  "0aa48af1515037",
  "1d1f978ce24214",
  "1ab2053344a818",
  "0fef6c51bebebe",
  "14dca2d3bd888d",
  "1f94cb5ebbfb7b",
  "15bba50d013c0c",
  "0959b8d40dc793",
  "0832035a2947f1",
  "0ae421b792b387",
  "0d6a70f9d803f9",
  "122e5b73ed649d",
  "0c436f26340d8f",
  "0f294e51ceefa4",
  "07c5f428452169",
  "1168de0e8ba3b0",
  "086daf1dcb936d",
  "08f9e7e6ed8a6f",
  "040fbeebebf129",
  "1ad81954a5cd4e",
  "09489e1fa825e4",
  "0bedd6bf77aa6c",
  "0b717aad1c0a71",
  "1b5189c7d64586",
  "1aec9bdccc6def",
  "1771d3c4cddf7a",
  "1ac301f699a440",
  "0f6c4d868ada74",
  "13c5b7d5b2ccf8",
  "0e4c5a06b506db",
  "1479bfca3e2a9f",
  "04ebc03bb8a3a8",
  "1d60c4414063a8",
  "1fcf0f65d1a217",
  "11db0a51becb37",
  "10cb143aaf0bac",
  "049afdf2f3f0a1",
  "009df13dc6204d",
  "1e837c48859fe6",
  "1f0d82a256e36f",
  "0e7179f817d77d",
  "19198610946f3f",
  "054ae5ceea162e",
  "0d664652affe2d",
  "017a0bea59db27",
  "072e2e29dd4f9a",
  "0173e8dd64f5ad",
  "1f8f3468923bb5",
  "071c20d7564a31",
  "16d8e03d02e61b",
  "19b9555c5c5dad",
  "07307578fd00a3",
  "07352871841239",
  "1ff133d25520c5",
  "090196f51a5762",
  "19773e48732653",
  "1164933327c31b",
  "0e0a15d14f69a5",
  "06a2caa2e66dfa",
  "14af5c04dd4ac7",
  "1476995d7d7b63",
  "17fa10503e302f",
  "0745470679a066",
  "190a372af860dd",
  "1cef9fcb147b90",
  "1d4f3f7dfa597e",
  "11fff9ffe4b92f",
  "1b9b2b665a5316",
  "0e7dba9c35dc5d",
  "1517a20293e7c4",
  "131e541f1cb209",
  "0620cce887838c",
  "14ab037e1d66ac",
  "1e16d90dbfb91a",
  "1da67d8dd4441f",
  "18c4726d9b0f15",
  "15e638ada614c2",
  "10575d1d8d6d36",
  "0f7eca368746f7",
  "174ea007a71f61",
  "0a2c494416ad8c",
  "14f5ed4dfbaf13",
  "0f463fba11a974",
  "05f1dfb809ea0a",
  "0fc83772161baf",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random whole setups the plan they had before the list: Max TPS 1`] = `
[
  "1446632e5b557c",
  "03106e543a94de",
  "0de04a9b83aeb7",
  "11b28b7a051b6f",
  "125bf2df322296",
  "1a6d031e996263",
  "060609277a3292",
  "1f3e710e4cbc70",
  "07b50a123cad54",
  "1a612b3c9d8035",
  "114e09b9ef988c",
  "013b4d10ff829d",
  "1094c1690dd376",
  "08b50a0acef30d",
  "07c3fab7cff5cc",
  "07fa93afdd287a",
  "0720f080ffc630",
  "1152b53252647a",
  "0344fd5fc9b4fd",
  "0babe6d498dee4",
  "0a483eff0d75b3",
  "0c7193db62f763",
  "01a0d7662f8ddf",
  "19dad669dc96d5",
  "1db99dac28445f",
  "03e26fb2bd5bb1",
  "1f5927ad81453e",
  "16389a97277e28",
  "15ba6e8f5f287a",
  "05bcd2217891ca",
  "12882aa5745081",
  "00b3e8eb7853ae",
  "0c7d4d4893d92e",
  "1e18987db99b5d",
  "09287a87e38644",
  "09f8536b5cee3f",
  "0a030872390888",
  "197db489e62b21",
  "0f1c2429e8e1d7",
  "0055cd7fb12043",
  "1184f852ef4515",
  "01b460898deae1",
  "06fc621fe66e75",
  "02f743b80625d6",
  "1920ec5c1c74d2",
  "183e2cfecc55fa",
  "074afaa780c901",
  "0b07b9a058f218",
  "10cb8eee692cd9",
  "0bbc1fef3eaf6b",
  "1c765fd0a890ac",
  "0daa6d39a4f71b",
  "1c81910dac3c1f",
  "064f350ce71f7c",
  "09476b1467fd28",
  "13317978abef2d",
  "04c419567f479f",
  "1375c90ac8b091",
  "052ddaf043381f",
  "0076d13b7bfa2d",
  "1be38c050ee471",
  "0e06ad3a35002f",
  "02ed41ab5adc9e",
  "03a6a5d4ec3796",
  "13c86eebf5b75f",
  "0990cc80df9d25",
  "00be8887afec07",
  "0b83ece517861c",
  "1d58cbaa0faf02",
  "1c237dcad25469",
  "17f0aff62072fb",
  "066bbd4ca0ba96",
  "077fff15fed725",
  "0bf55b8f6a6a2a",
  "090200f89fe1d1",
  "0eec6eab646837",
  "1f210fbf24e279",
  "1cac65c7901987",
  "145d8602c77c53",
  "11400d0c139bf0",
  "147d38a81b4362",
  "01e62f4d2eca20",
  "148cb7411d6d54",
  "12d3780a8aa68e",
  "0b0686c29d3df4",
  "083e6e7f87378d",
  "12cc0b88815bd5",
  "0686575ff1e48a",
  "010730c84f8c75",
  "1952f65b6ec448",
  "1f365f5e3fcea7",
  "144b3b3c184d5f",
  "1391fa1e9c21d2",
  "0cf952adcb05b9",
  "1f5a7c802512ef",
  "0eeaebbb313393",
  "1f0fc93350ace2",
  "0496d51a2cb11d",
  "0957720f246f04",
  "0e447d6b6524bf",
  "07e06352d6e29c",
  "19383849102d1f",
  "0185408ee911b6",
  "11fda0a586a926",
  "0f5ca1fe8bba3d",
  "0ab35f48711974",
  "11cecdd1c70ca1",
  "0fffff03ed3637",
  "050b283781560b",
  "01981213c97055",
  "0753ec03d90e84",
  "05a4dc42c428bc",
  "1d39b40624ea24",
  "12b0aeacc648ca",
  "10fbe42bb9ddbb",
  "080347b9803257",
  "0884a9901f9330",
  "081d68a4bd6c26",
  "1e211828cfc006",
  "058a11f7753dba",
  "1f94cb5ebbfb7b",
  "142ac5632539c4",
  "0959b8d40dc793",
  "0fa25f30f8c76a",
  "188ae8572465c9",
  "077d182c85b9bb",
  "119f8c9282196d",
  "093b61d1720516",
  "065c1de2f41d98",
  "07c5f428452169",
  "05a50a6581ac63",
  "110e368ad74c1f",
  "089cd8d34bbc77",
  "07d76b36f896d5",
  "0c2acb20b37b74",
  "09489e1fa825e4",
  "0096fe3070a59e",
  "14bb025aae573e",
  "12f5e36ca20af2",
  "1cb52784250279",
  "1771d3c4cddf7a",
  "153e8434d8959d",
  "0f6c4d868ada74",
  "16d840b7b57862",
  "0de1ea05249524",
  "0ad51ca562d899",
  "04ebc03bb8a3a8",
  "118c86a66a2d4d",
  "1fc871429b1a64",
  "0d6fec5184f954",
  "16c437fedde641",
  "009615fd2956f5",
  "1b89f5eca5be85",
  "07673f13aa7c95",
  "0981c5bfe60546",
  "0887f471fb5e2c",
  "10367db75c76eb",
  "0837d33f5e19f8",
  "18a751a0f37265",
  "0187a8348132c1",
  "1d2c91da30a485",
  "045490fef2e7c1",
  "07811e18c5d062",
  "172b7f7659bfbc",
  "16d8e03d02e61b",
  "03d4994a5269a1",
  "07307578fd00a3",
  "170b1ddac9d6a8",
  "0334ab0284e965",
  "1730352b1a9dc2",
  "19773e48732653",
  "0edbae89449773",
  "15c6c89b9d26c0",
  "09c51d0f2ba565",
  "0f197f2115ebc0",
  "114c233e7875bc",
  "1530afb7d5d796",
  "0fa0225e07aa35",
  "190a372af860dd",
  "000d33a111154d",
  "0856e5a8c415f6",
  "11fff9ffe4b92f",
  "1b9b2b665a5316",
  "11fd32118d2220",
  "104dedd544f1ad",
  "1696db911b597d",
  "00a19b081e095d",
  "14e9f487c4a4a3",
  "111086731f04ea",
  "187ffd2f0dd558",
  "0ff9895bf355b1",
  "12cbe345b2092c",
  "036080cbf2340d",
  "1b8aab5b08625c",
  "17ea4b9ef047d2",
  "0a2c494416ad8c",
  "00eabba5e23aff",
  "08f53c05207056",
  "1e260fe138d3d4",
  "07abeef3fecb65",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random whole setups the plan they had before the list: as drawn, a missing Priority as Defensive 1`] = `
[
  "0ec3510e48dcfc",
  "03106e543a94de",
  "05ef5361c0fc15",
  "1e867bb608b691",
  "0ae8de499ee9df",
  "1a25365527c932",
  "060609277a3292",
  "0a8a2113524b90",
  "07b50a123cad54",
  "1a612b3c9d8035",
  "114e09b9ef988c",
  "07adf63eb3131c",
  "143e63077ac126",
  "0af2f17b314517",
  "03e8e51bdda207",
  "07a181decee71a",
  "0720f080ffc630",
  "183895ca0c83dc",
  "038ef07f771bdc",
  "113ed2cf940b8d",
  "0164575d2f237a",
  "0c7193db62f763",
  "175f0033561110",
  "19dad669dc96d5",
  "17bd229cef250e",
  "0c4cd92098a512",
  "05d46f75b18321",
  "0a51a72bf83e8a",
  "14c1719dc86383",
  "05bcd2217891ca",
  "0e570cec90c922",
  "15a2dcb4b33a8f",
  "0df7e83ecac11d",
  "0f730e01e1dee8",
  "0fc5bbcc2e4780",
  "09f8536b5cee3f",
  "1555a10115326b",
  "197db489e62b21",
  "0b47bae4d5e5a3",
  "04773e7d4ffb22",
  "095118add262fc",
  "00fac75909a9eb",
  "097e85c854813f",
  "112353ec0c8f22",
  "1920ec5c1c74d2",
  "035123a6e97084",
  "1136835a161262",
  "0b07b9a058f218",
  "0b0d660c67da4a",
  "0bbc1fef3eaf6b",
  "10a5ac2a6fc4a8",
  "0daa6d39a4f71b",
  "199c4f03e21222",
  "064f350ce71f7c",
  "0340bf56390101",
  "049e3edeb1c473",
  "1bfa65beed1298",
  "1375c90ac8b091",
  "166a99be85bce5",
  "0076d13b7bfa2d",
  "03b788793c606f",
  "01372982e299ed",
  "05d1650292ccac",
  "03a6a5d4ec3796",
  "11b6bfe6b2ac96",
  "0990cc80df9d25",
  "03621e9bbfc757",
  "00788e5a810b72",
  "1d58cbaa0faf02",
  "0e8e3ede514ec2",
  "125214a33b1c78",
  "0ca6c611a31a16",
  "010915a51cedda",
  "17dfff7fd67273",
  "0b31a4fff49bc0",
  "1f0050ea284ef0",
  "046414a8337e0b",
  "167169a851d10e",
  "145d8602c77c53",
  "1ff263116dae3a",
  "092deab4aec1e9",
  "01e62f4d2eca20",
  "12487eebc6cdee",
  "1050e898d35fe5",
  "0c47c4f16cfb5c",
  "107e05d4ed40a1",
  "09955f6449b259",
  "1f4c8310e0cd0c",
  "1cbddc7d381deb",
  "0bc5e606325960",
  "017c59fdea821d",
  "144b3b3c184d5f",
  "1831ff3dc8166d",
  "0cf952adcb05b9",
  "1f5a7c802512ef",
  "0eeaebbb313393",
  "1f0fc93350ace2",
  "1e2a1c26072441",
  "0957720f246f04",
  "0b4b8cae7d7ce1",
  "04583793558b6f",
  "1dca7a9f30c211",
  "0185408ee911b6",
  "11fda0a586a926",
  "0364591003be12",
  "0ab35f48711974",
  "05f365e45d78e8",
  "1bb0aa936a48b0",
  "021a3f6e5d214f",
  "01981213c97055",
  "0753ec03d90e84",
  "05a4dc42c428bc",
  "1d39b40624ea24",
  "143c08dbab0f4b",
  "145a86778273b6",
  "0aa48af1515037",
  "1d1f978ce24214",
  "081d68a4bd6c26",
  "0fef6c51bebebe",
  "14dca2d3bd888d",
  "1f94cb5ebbfb7b",
  "15bba50d013c0c",
  "0959b8d40dc793",
  "0832035a2947f1",
  "0ae421b792b387",
  "0d6a70f9d803f9",
  "122e5b73ed649d",
  "0c436f26340d8f",
  "065c1de2f41d98",
  "07c5f428452169",
  "1168de0e8ba3b0",
  "086daf1dcb936d",
  "08f9e7e6ed8a6f",
  "07d76b36f896d5",
  "1ad81954a5cd4e",
  "09489e1fa825e4",
  "0bedd6bf77aa6c",
  "0b717aad1c0a71",
  "12f5e36ca20af2",
  "1cb52784250279",
  "1771d3c4cddf7a",
  "1ac301f699a440",
  "0f6c4d868ada74",
  "16d840b7b57862",
  "0e4c5a06b506db",
  "1479bfca3e2a9f",
  "04ebc03bb8a3a8",
  "1d60c4414063a8",
  "1fcf0f65d1a217",
  "11db0a51becb37",
  "10cb143aaf0bac",
  "049afdf2f3f0a1",
  "009df13dc6204d",
  "1e837c48859fe6",
  "0981c5bfe60546",
  "0e7179f817d77d",
  "19198610946f3f",
  "0837d33f5e19f8",
  "18a751a0f37265",
  "0187a8348132c1",
  "072e2e29dd4f9a",
  "0173e8dd64f5ad",
  "07811e18c5d062",
  "071c20d7564a31",
  "16d8e03d02e61b",
  "19b9555c5c5dad",
  "07307578fd00a3",
  "07352871841239",
  "1ff133d25520c5",
  "090196f51a5762",
  "19773e48732653",
  "1164933327c31b",
  "0e0a15d14f69a5",
  "06a2caa2e66dfa",
  "14af5c04dd4ac7",
  "1476995d7d7b63",
  "17fa10503e302f",
  "0fa0225e07aa35",
  "190a372af860dd",
  "000d33a111154d",
  "1d4f3f7dfa597e",
  "11fff9ffe4b92f",
  "1b9b2b665a5316",
  "0e7dba9c35dc5d",
  "1517a20293e7c4",
  "1696db911b597d",
  "0620cce887838c",
  "14e9f487c4a4a3",
  "1e16d90dbfb91a",
  "1da67d8dd4441f",
  "18c4726d9b0f15",
  "15e638ada614c2",
  "10575d1d8d6d36",
  "0f7eca368746f7",
  "174ea007a71f61",
  "0a2c494416ad8c",
  "14f5ed4dfbaf13",
  "0f463fba11a974",
  "05f1dfb809ea0a",
  "0fc83772161baf",
]
`;
